# open_ptrack_v2

detection/: CMakeLists.txt
detection/apps/: gpu_people.cpp  gpu_people.cpp.old  ground_based_people_detector_node.cpp  pcl_pcd_prob.cpp  pcl_skeleton_node.cpp
detection/conf/: ground_based_people_detector_kinect1.yaml  ground_camera_rgb_optical_frame.txt  ground_kinect01_ir_optical_frame.txt  ground_kinect02_rgb_optical_frame.txt  ground_kinect1_head_rgb_optical_frame.txt  ground_kinect2_head_ir_optical_frame.txt  ground_kinect_rgb_optical_frame.txt  ground_realsense2_color_optical_frame.txt  ground_zed_left_camera_frame.txt
detection/include/open_ptrack/detection/impl/: person_classifier.hpp  undefined
detection/launch/: camera_poses.txt  detection_node_kinect01.launch  detection_node_kinect02.launch  detector_depth_kinect1.launch  detector_depth_rs.launch  skeleton_detector_kinect1.launch  skeleton_detector_kinect1_siehler.launch  skeleton_detector_rs.launch
docker/open_ptrack/: Dockerfile
docker/open_ptrack-dep/: Dockerfile
opt_calibration/conf/: camera_network.yaml  camera_poses.yaml  opt_calibration.rviz
opt_calibration/launch/: opt_calibration_master.launch  opt_calibration_results.launch  opt_define_reference_frame.launch  sensor_kinect01.launch  sensor_kinect02.launch
rtpose_wrapper/conf/: kinect1_params.yaml
siehler/: CMakeLists.txt  package.xml
siehler/apps/: pc_to_depth_image_node.cpp
siehler/include/: range_image_planar_new.h
siehler/src/: OrganizedPointCloudToRangeImage.cpp
tracking/: CMakeLists.txt
tracking/apps/: tracker_node.cpp
tracking/conf/: MultiCameraTracking.rviz  MultiCameraTrackingKinect1.rviz  SingleCameraTracking.rviz  skeleton_tracker_single.yaml  tracking.rviz
tracking/launch/: single_camera_tracking_node_rs.launch  skeleton_detection_and_tracking_kinect2.launch  tracking_node.launch
yolo_detector/: CMakeLists.txt
yolo_detector/launch/: detector_yolo_kinect1.launch
